# data-gcp

./: .pre-commit-config.yaml  404.html  Makefile  index.html  pyproject.toml  sitemap.xml
about/: index.html
automations/: containerize_microservice.py  uv_secure_fix.py
automations/uv-secure-fix/: pyproject.toml
automations/uv-secure-fix/src/uv_secure_fix/: cli.py
dbt/glossary/: index.html
dbt/home/: index.html
dbt/overview/: index.html
dbt/references/statistical_confidentiality/: index.html
dbt/vidoc_kpis/: index.html
dbt/vidoc_kpis/active_beneficiaries/: index.html
dbt/vidoc_kpis/beneficiary_coverage_rate/: index.html
dbt/vidoc_kpis/booking_share_by_category/: index.html
dbt/vidoc_kpis/cumulative_beneficiaries/: index.html
dbt/vidoc_kpis/diversity_3plus_categories/: index.html
dbt/vidoc_kpis/ever_credited_beneficiaries/: index.html
jobs/ml_jobs/artist_linkage/: pyproject.toml
jobs/ml_jobs/edito_semantic_search/: Makefile  README.md  prepare_catalog_data.py  pyproject.toml
jobs/ml_jobs/offer_compliance/: pyproject.toml
orchestration/: .env.build  .env.secrets.example  .gitignore  Makefile  README.kind.md  kind-config.yaml
orchestration/airflow/: Dockerfile  Dockerfile.k8s.template  orchestration-requirements.txt
orchestration/dags/common/: config.py
orchestration/helm/: values-local.yaml
orchestration/k8s/: airflow-variables.yaml  dags-pvc.yaml  logs-pvc.yaml
orchestration/k8s-airflow/: k8s-worker-requirements.txt
project_structure_and_data_flow/: index.html
search/: search_index.json
team/de/apis/: index.html
(+226 files in other folders)
